# mup-mail

./: .env_example  Cargo.toml  Dockerfile  README.md  config.toml  docker-compose.yml
adapters/provider/: Cargo.toml
adapters/provider/src/: lib.rs  mailgun_adapter.rs
adapters/publish/: Cargo.toml
adapters/publish/src/: user_publisher_adapter.rs
mail/: Cargo.toml
mail-application/: Cargo.toml
mail-application/src/application/port/incoming/: mod.rs  send_activate_use_case.rs
mail-application/src/application/port/outgoing/: mod.rs  send_mail_port.rs
mail-application/src/application/service/: mod.rs  new_user_service.rs  send_activate_service.rs
mail-application/src/domain/: mail.rs
mail/src/: config.rs  main.rs
