[package]
name = "mail"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = "0.11.0"
env_logger = "0.9.0"
lazy_static = "1.4.0"
serde = { version = "1.0.130", features = ["derive"] }
anyhow = "1.0.45"
mail-application = {path = "../mail-application"}
publish = {path = "../adapters/publish"}
