[package]
name = "provider"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mail-application = {path = "../../mail-application"}
anyhow = "1.0.47"
async-trait = "0.1.51"
reqwest = { version = "0.11.6", features = ["json"] }
serde = { version = "1.0.130", features = ["derive"] }
