[package]
name = "publish"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.47"
async-trait = "0.1.51"
deadpool = "0.9.2"
deadpool-lapin = "0.9.1"
futures-util = "0.3.18"
lapin = "1.8.1"
log = "0.4.14"
mail-application = {path = "../../mail-application"}
tokio = { version = "1.14.0", features = ["full"] }
tokio-amqp = "1.0.0"
